@@ -68,7 +68,7 @@
 # Minimum font size in pixels
 #font_min_size=6
 
-# Show tooltip popups for UI and for HTML title attributes
+# Show tooltip popups for HTML title attributes
 #show_tooltip=YES
 
 # Set this to YES if you want to limit the word wrap width to the viewport
@@ -323,6 +323,9 @@ ui_tab_bg_color=#b7beb7
 #show_search=YES
 #show_help=YES
 #show_progress_box=YES
+
+# Show tooltip popups for the UI
+#show_ui_tooltip=YES
 
 # Start dillo with the panels hidden?
 #fullwindow_start=NO
